add buttons created upon initial search and eventlistener for buttons created

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="forecast-container"><!--contains DYNAMIC elements; 5 day forecast report-->
 
         </div>
-        <div><!--contains DYNAMIC elements; contains callback buttons-->
+        <div id="recall"><!--contains DYNAMIC elements; contains callback buttons-->
 
         </div>
     </main>
