--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link src="./assets/css/style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Weather Dashboard</title>
 </head>
 <body>
@@ -13,22 +14,27 @@
             Weather Dashboard
         </h1>
     </header>
-    <main>
-        <form class="form-container"><!--contains STATIC elements; contains city selector-->
-            
-            <input type="text" placeholder="Insert City Name" name="city" id="city" class="form-input"/>
-            <button class="btn" id="check-weather">Check Weather</button>
+    <main class="container text-center row justify-content-evenly">
+        <section class="col" id="interaction-container">
+            <form class="d-flex flex-column" id="form-container"><!--contains STATIC elements; contains city selector-->
+                
+                <label for="city">Enter City Name:</label>
+                <input type="text" placeholder="Insert City Name" name="city" id="city" class="form-input"/>
+                <button class="btn" id="check-weather">Check Weather</button>
 
-        </form>
-        <section class="current-weather" id="weather-container"><!--contains DYNAMIC elements; contains weather report-->
+            </form>
+            <div class="d-flex flex-column" id="recall"><!--contains DYNAMIC elements; contains callback buttons-->
 
+            </div>
         </section>
-        <div id="forecast-container"><!--contains DYNAMIC elements; 5 day forecast report-->
+        <section class="col" id="report-container">
+            <div class="" id="weather-container"><!--contains DYNAMIC elements; contains weather report-->
 
-        </div>
-        <div id="recall"><!--contains DYNAMIC elements; contains callback buttons-->
+            </div>
+            <div class="" id="forecast-container"><!--contains DYNAMIC elements; 5 day forecast report-->
 
-        </div>
+            </div>
+        </section>
     </main>
     <footer>
 
