--- a/index.html
+++ b/index.html
@@ -4,34 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link src="./assets/css/style.css"/>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Weather Dashboard</title>
 </head>
 <body>
-    <header>
-        <h1>
+    <header class="container text-center">
+        <h1 class="col">
             Weather Dashboard
         </h1>
     </header>
-    <main class="container text-center row justify-content-evenly">
+    <main class="container text-center row justify-content-around flex-wrap">
         <section class="col" id="interaction-container">
-            <form class="d-flex flex-column" id="form-container"><!--contains STATIC elements; contains city selector-->
+            <form class="card d-flex flex-column flex-wrap justify-content-around" id="form-container"><!--contains STATIC elements; contains city selector-->
+                <div class="card-header d-flex justify-content-center">
+                    <label for="city" class="">Enter City Name:</label>
+                </div>
                 
-                <label for="city">Enter City Name:</label>
-                <input type="text" placeholder="Insert City Name" name="city" id="city" class="form-input"/>
-                <button class="btn" id="check-weather">Check Weather</button>
-
+                <div class="card-body d-flex flex-row flex-wrap justify-content-around">
+                    <input type="text" placeholder="Insert City Name" name="city" id="city" class="form-input col-8 m-1"/>
+                    <button class="btn btn-primary btn-lg bd-highlight col-6"  id="check-weather">Check Weather</button>
+                </div>
             </form>
-            <div class="d-flex flex-column" id="recall"><!--contains DYNAMIC elements; contains callback buttons-->
+            <div class="d-flex flex-column justify-content-center align-items-center" id="recall"><!--contains DYNAMIC elements; contains callback buttons-->
 
             </div>
         </section>
         <section class="col" id="report-container">
-            <div class="" id="weather-container"><!--contains DYNAMIC elements; contains weather report-->
+            <div class="d-flex flex-column justify-start" id="weather-container"><!--contains DYNAMIC elements; contains weather report-->
 
             </div>
-            <div class="" id="forecast-container"><!--contains DYNAMIC elements; 5 day forecast report-->
+            <div class="d-flex flex-row justify-content-center align-center" id="forecast-container"><!--contains DYNAMIC elements; 5 day forecast report-->
 
             </div>
         </section>
