--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="container-fluid text-center">
-        <h1 class="">
+        <h1>
             Weather Dashboard
         </h1>
     </header>
@@ -32,6 +32,9 @@
         </section>
         <section class="col-sm-12 col-md-6 col-lg-9" id="report-container">
             <div class="d-flex flex-column justify-start align-items-start" id="weather-container"><!--contains DYNAMIC elements; contains weather report-->
+
+            </div>
+            <div class="d-flex justify-content-start" id="forecast-header">
 
             </div>
             <div class="d-flex flex-row flex-wrap justify-content-around align-items-center" id="forecast-container"><!--contains DYNAMIC elements; 5 day forecast report-->
