polish style and fonts on weather and forecast reports

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </h1>
     </header>
     <main class="container text-center row justify-content-around flex-wrap">
-        <section class="col-sm-12 col-md-6 col-lg-3" id="interaction-container">
+        <section class="col-sm-12 col-md-6 col-lg-4" id="interaction-container">
             <form class="card d-flex flex-column flex-wrap justify-content-around" id="form-container"><!--contains STATIC elements; contains city selector-->
                 <div class="card-header d-flex justify-content-center">
                     <label for="city" class="">Enter City Name:</label>
@@ -27,10 +27,12 @@
                 </div>
             </form>
             <div class="d-flex flex-column justify-content-center align-items-center" id="recall"><!--contains DYNAMIC elements; contains callback buttons-->
+                <div class="" id="recall-header">
 
+                </div>
             </div>
         </section>
-        <section class="col-sm-12 col-md-6 col-lg-9" id="report-container">
+        <section class="col-sm-12 col-md-6 col-lg-8" id="report-container">
             <div class="d-flex flex-column justify-start align-items-start" id="weather-container"><!--contains DYNAMIC elements; contains weather report-->
 
             </div>
